--- a/package.json
+++ b/package.json
@@ -18,7 +18,7 @@
   "license": "MIT",
   "author": "goenning",
   "dependencies": {
-    "@microsoft/applicationinsights-web": "^2.1.0"
+    "@microsoft/applicationinsights-web": "^2.6.3"
   },
   "repository": {
     "type": "git",
@@ -28,14 +28,17 @@
     "url": "https://github.com/goenning/next-applicationinsights/issues"
   },
   "peerDependencies": {
-    "next": "^9.0.0",
-    "react": "^16.0.0"
+    "next": "^10 || ^11",
+    "react": "^17.0.0",
+    "react-dom": "^17.0.0"
   },
   "devDependencies": {
-    "@types/node": "^12.6.2",
-    "@types/react": "^16.8.23",
-    "next": "^9.0.0",
-    "react": "^16.8.6",
-    "typescript": "^3.5.2"
+    "@types/node": "^14.17.4",
+    "@types/react": "^17.0.11",
+    "@types/react-dom": "^17.0.8",
+    "next": "^11.0.1",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "typescript": "^4.3.4"
   }
 }
