--- a/package.json
+++ b/package.json
@@ -28,7 +28,7 @@
     "url": "https://github.com/goenning/next-applicationinsights/issues"
   },
   "peerDependencies": {
-    "next": "^10.0.0",
+    "next": ">=10.0.0",
     "react": "^17.0.0",
     "react-dom": "^17.0.0"
   },
@@ -36,7 +36,7 @@
     "@types/node": "^14.17.4",
     "@types/react": "^17.0.11",
     "@types/react-dom": "^17.0.8",
-    "next": "^10.2.3",
+    "next": ">=10.2.3",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "rimraf": "^3.0.2",
